--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,6 +6,7 @@
 
 @layer base {
 	@import url('https://fonts.googleapis.com/css2?family=Arapey:ital@0;1&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Italianno&display=swap');
 	@import url('https://fonts.googleapis.com/css2?family=Khula:wght@300;400;600;700;800&display=swap');
 	/* 
 	@font-face {
@@ -48,4 +49,9 @@
 html,
 body {
 	@apply font-body;
+}
+
+.landing-image {
+	background-size: contain;
+	height: 600px;
 }
